<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>


    <string name="title_home">title_home</string>
    <string name="title_dashboard">title_dashboard</string>
    <string name="title_notifications">title_notifications</string>
    <string name="title_activity_for_fatal_eror">ActivityForFatalEror</string>


    <string name="action_settings">Settings</string>

    <string name="item_title">Philadelphia Dinner</string>
    <string name="item_time">6:00pm – 7:30pm, March 14-15, 2016</string>
    <string name="item_host">San Jose Conference Center</string>
    <string name="item_place">Santa Monica Hotel</string>
    <string name="item_adres">San Jose, California</string>
    <string name="button_more">More</string>
    <string name="button_restore">Restore</string>



    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
</resources>