<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/md_keylines"
    android:layout_marginRight="@dimen/md_keylines"
    android:layout_marginTop="@dimen/md_keylines"
    android:foreground="?attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:scaleType="centerCrop"
            tools:src="@drawable/bg_img1" />

        <TextView
            android:id="@+id/card_title_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/card_image"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginTop="@dimen/md_keylines"
            tools:text="@string/item_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/card_title_top2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_title_top"
            android:layout_marginLeft="@dimen/md_keylines"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            tools:text="@string/item_time"/>

        <TextView
            android:id="@+id/card_title_top3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_title_top2"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginTop="@dimen/md_keylines"
            tools:text="@string/item_host"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/card_title_top4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_title_top3"
            android:layout_marginLeft="@dimen/md_keylines"
            tools:text="@string/item_place"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/location_mark"
            android:layout_alignBottom="@+id/card_image"
            android:layout_width="@dimen/md_keylines"
            android:layout_height="@dimen/md_keylines"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginBottom="@dimen/md_keylines"
            app:srcCompat="@drawable/map_marker_outline"
            />
        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            tools:text="@string/item_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            android:layout_alignTop="@+id/location_mark"
            android:layout_toEndOf="@+id/location_mark"/>

        <TextView
            android:id="@+id/card_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_image"
            android:layout_marginTop="@dimen/md_keylines"
            android:layout_marginBottom="@dimen/md_keylines"
            tools:text="@string/detail_desc"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:ellipsize="end"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/list_body" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/action_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/cards_button_height"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/button_more"
                android:background="@drawable/button_red"
                />

            <Button
                android:id="@+id/action_button2"
                android:layout_width="0dp"
                android:layout_height="@dimen/cards_button_height"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:textColor="@color/white"
                android:text="@string/button_restore"
                android:background="@drawable/button_black"
                />

        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>
